# Study_ZMQ

./: CMakeLists.txt  RunCMake.bat
PracticeZMQ/HelloWorld/: HelloWorldClient.cpp  HelloWorldServer.cpp
PracticeZMQ/PubSub/: Publisher.cpp  Subscriber.cpp
PracticeZMQ/RadioDish/: RadioDishClient.cpp  RadioDishServer.cpp
참고자료/: 모델의 대략적 정리.txt  참고 사이트.txt
